# asagolf

./: .gitignore  BOOK3_SCOPE.md  CLOSURE_DFCONSERV.md  CLOSURE_ORDLIT.md  COST_STRUCTURE.md  Cargo.toml  EUCLID_FLOOR.md  FRONTIER_A_REVMATH.md  FRONTIER_B_GND.md  FRONTIER_C_ORDERCORE.md  FRONTIER_D_RANK.md  FRONTIER_E_COVER.md  HISTORY.md  METASEARCH.md  NARRATIVE.md  README.md  SDG_MODEL.md  SEAM1_INFINITY.md  SEAM2_DAGSEP.md  SEAM4_IDENTITY.md  SEQUEL_SCOPE.md  STAGE2_A.md  STAGE2_BC.md  STAGE2_SCOPE.md  STAGE3_HF.md  SUBSTRATE_FLOOR.md
data/: birkhoff.mm  euclid.mm  grounded.mm  qzf.mm  qzfext.mm  qzfhf.mm  qzfhf_gnd.mm  qzfhf_ord.mm  sdg.base.mm  sdg.bianchi2.mm  sdg.calc.mm  sdg.calc2.mm  sdg.conn.mm  sdg.gauge.mm  sdg.gaugecov.mm  sdg.hodge.mm  sdg.jacgen.mm  sdg.jacobi.mm  sdg.metric.mm  sdg.mm  sdg.nonab.mm  sdg.nonabF.mm  sdg.nonabgen.mm  sdg.spine.mm  sdg.tangent.mm  sdg.taylor.mm
docs/: SCHEMA.md  asa.html  index.html  slides.html
docs/assets/: app.js  asa.css  explorer.js  slides.css  slides.js  styles.css  verify-worker.js
docs/assets/stella/: colors_and_type.css  stella.css
docs/assets/wasmpkg/: asagolf_kernel_wasm.d.ts  asagolf_kernel_wasm.js  asagolf_kernel_wasm_bg.wasm  asagolf_kernel_wasm_bg.wasm.d.ts  package.json
docs/data/: site.json  site.sample.json
scripts/: build-wasm.sh  fetch-setmm.sh
src/: cse.rs  dag.rs  elaborate.rs  kernel.rs  main.rs  metamath.rs  model.rs  number.rs  proof_g1.rs  proof_g2.rs  proof_g3.rs  proof_g4a.rs  search.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
