# Standalone WASM crate that wraps the *unchanged* trust-root kernel
# (`../src/kernel.rs`, included verbatim via #[path]) and exposes it to JS.
#
# Deliberately NOT a member of / referenced by the top-level crate: building
# this never touches `cargo build --release` of birkhoff-asa, the binaries,
# or the 88-verify. It has its own lockfile and target dir.
#
# Build:  (from repo root)
#   wasm-pack build wasm --release --target web --out-dir ../docs/assets/wasmpkg
#
[package]
name = "asagolf-kernel-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM wrapper around the asagolf sound Metamath-subset kernel (trust root, unchanged)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = "s"
lto = true
